# bytes-to-ndarray

./: README.md  createarray.py  example.c  meson.build
